# junk-drawer

./: .gitignore  README.md  queens.py
cypher/: Makefile  cypher.cpp
explorations/haskell/: disenvoweler.hs  fizzbuzz.hs
life/: CMakeLists.txt  build.py  life.cpp  life.hpp  pyproject.toml
one-off/: pi.py  puzzle.py  puzzle.txt  puzzle2.txt  queens.py
snake-89/: Makefile  main.c  screen.c  screen.h  snake.c  snake.h
